# breenix

./: .gdbinit  .gitignore  .gitmodules  .mcp.json  .tmuxinator.yml  AGENTS.md  BOOT_TEST_PROGRESS.md  CI_ENVIRONMENT_NOTES.md  CI_GREEN_ACTION_PLAN.md  CI_SYSCALL_FAILURE_ANALYSIS.md  CLAUDE.md  CLOCK_GETTIME_IMPLEMENTATION_REPORT.md  CLOCK_GETTIME_IMPROVEMENTS.md  Cargo.toml  DEFINITIVE_USERSPACE_SUCCESS_PROOF.md  DOLT_REMOTE.md  DOUBLE_FAULT_HANDLER_ISSUE.md  ENOSYS_TEST_VERIFICATION.md  EXTERNAL_VALIDATION_PROOF.md  FEATURE_COMPARISON.md  Gemini.md  HARDENING_IMPLEMENTATION_COMPLETE.md  INVALID_OPCODE_RUNTIME_CRASH.md  IRETQ_DOUBLE_FAULT_INVESTIGATION.md  IRETQ_HANG_DEBUG_PLAN.md  KERNEL_PAGE_TABLE_FIX_PLAN.md  KERNEL_STACK_FIX_SUCCESS.md  MILESTONE_A_PROOF_REPORT.md  Makefile  NEXT_STEPS.md  PATH_TO_USERSPACE.md  PHASE5_CLEANUP.md  PLAN.md  README.md  RING3_PROOF.md  RING3_SMOKE_TEST_STATUS_REPORT.md  RING_3_EXECUTION_PROOF.md  SKILLS_README.md  STD_SUPPORT_ANALYSIS.md  SYSCALL_IMPLEMENTATION_STATUS.md  (+173 more)
breenix-web/: .gitignore  Cargo.toml  index.html
breenix-web/src/: block_mem.rs  canvas.rs  hal.rs  kernel.rs  lib.rs  shell.rs
breenix-web/src/commands/: builtins.rs  mod.rs
breenix-web/www/: index.js
kernel/: Cargo.toml  README.md  build.rs  linker.ld  test_serial.txt
kernel/src/: clock_gettime_test.rs  contract_runner.rs  elf.rs  fault_stubs.asm  framebuffer.rs  gdt.rs  gdt_tests.rs  interrupts.rs  interrupts_fix.rs  irq_log.rs  keyboard.rs  lib.rs  log_buffer.rs  logger.rs  macros.rs  main.rs  main_aarch64.rs  per_cpu.rs  per_cpu_aarch64.rs  platform_config.rs  post_tests.rs  preempt_count_test.rs  rtc_test.rs  serial.rs  serial_aarch64.rs  spinlock.rs  stack_switch.rs  terminal_emulator.rs  test_checkpoints.rs  test_exec.rs  test_harness.rs  test_userspace.rs  test_waitpid.rs  time_test.rs  tls.rs  trace.rs  userspace_fault_tests.rs  userspace_test.rs
kernel/src/arch_impl/: mod.rs  traits.rs
kernel/src/block/: mod.rs  virtio.rs
kernel/src/boot/: mod.rs  test_disk.rs  test_list.rs
kernel/src/contracts/: kernel_stack.rs  mod.rs  page_table.rs  tss.rs
kernel/src/drivers/: fw_cfg.rs  mod.rs  pci.rs
kernel/src/fs/: mod.rs
kernel/src/graphics/: arm64_fb.rs  cursor.rs  demo.rs  double_buffer.rs  font.rs  log_capture.rs  mod.rs  particles.rs  primitives.rs  render_queue.rs  render_queue_aarch64.rs  render_task.rs  render_task_aarch64.rs  split_screen.rs  terminal.rs  terminal_manager.rs
kernel/src/interrupts/: breakpoint_entry.asm  context_switch.rs  timer.rs  timer_entry.asm  timer_handler.asm
kernel/src/ipc/: fd.rs  fifo.rs  mod.rs  pipe.rs  poll.rs  stdin.rs
kernel/src/keyboard/: event.rs  modifiers.rs  scancodes.rs  stream.rs
kernel/src/memory/: PROPER_PAGE_TABLE_DESIGN.md  arch_stub.rs  cow_stats.rs  fork_helpers.rs  frame_allocator.rs  frame_metadata.rs  heap.rs  kernel_page_table.rs  kernel_stack.rs  layout.rs  mod.rs  paging.rs  per_cpu_stack.rs  process_memory.rs  slab.rs  stack.rs  tlb.rs  vma.rs
kernel/src/net/: arp.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
kernel/src/process/: creation.rs  exec.rs  fork.rs  manager.rs  mod.rs  process.rs  spawn.rs
kernel/src/serial/: command.rs
kernel/src/shell/: mod.rs
kernel/src/signal/: constants.rs  delivery.rs  mod.rs  trampoline.rs  types.rs
kernel/src/socket/: mod.rs  types.rs  udp.rs  unix.rs
kernel/src/syscall/: audio.rs  clone.rs  dispatcher.rs  entry.asm  epoll.rs  errno.rs  exec.rs  fifo.rs  fs.rs  futex.rs  graphics.rs  handler.rs  handlers.rs  io.rs  ioctl.rs  iovec.rs  memory.rs  memory_common.rs  mmap.rs  mod.rs  pipe.rs  pty.rs  random.rs  session.rs  signal.rs  socket.rs  syscall_consts.rs  table.rs  time.rs  userptr.rs  wait.rs
kernel/src/task/: completion.rs  context.rs  executor.rs  kthread.rs  kthread_tests.rs  mod.rs  process_context.rs  process_task.rs  scheduler.rs  softirq_tests.rs  softirqd.rs  spawn.rs  thread.rs  userspace_switch.rs  waitqueue.rs  workqueue.rs  workqueue_tests.rs
kernel/src/test_framework/: btrt.rs  catalog.rs  display.rs  executor.rs  ktap.rs  mod.rs  progress.rs  registry.rs
kernel/src/tests/: mod.rs  syscall_guardrails.rs
kernel/src/time/: mod.rs  rtc.rs  rtc_tests.rs  time.rs  timer.rs  tsc.rs
kernel/src/tracing/: buffer.rs  core.rs  counter.rs  macros.rs  mod.rs  output.rs  provider.rs  timestamp.rs
kernel/src/tty/: driver.rs  ioctl.rs  line_discipline.rs  mod.rs  termios.rs
kernel/tests/: serial_test.rs
libs/breengel/: Cargo.toml
libs/breengel/src/: event.rs  font.rs  lib.rs  window.rs
libs/breenix-core/: Cargo.toml
libs/breenix-core/src/: block.rs  lib.rs
libs/libbreenix/: Cargo.toml
libs/libbreenix-libc/: Cargo.toml
libs/libbreenix-libc/.cargo/: config.toml
libs/libbreenix-libc/src/: lib.rs
libs/libbreenix/src/: argv.rs  audio.rs  dns.rs  errno.rs  error.rs  fs.rs  graphics.rs  http.rs  io.rs  lib.rs  memory.rs  process.rs  pty.rs  runtime.rs  signal.rs  socket.rs  synth.rs  syscall.rs  termios.rs  time.rs  types.rs
libs/libgfx/: Cargo.toml
libs/libgfx/src/: bitmap_font.rs  color.rs  font.rs  framebuf.rs  lib.rs  (+3 more)
mcp/: Cargo.toml  README.md  mcp.json  start.sh
mcp/src/: http_server.rs  main.rs
parallels-loader/: Cargo.toml
parallels-loader/src/: acpi_discovery.rs  gop_discovery.rs  hw_config.rs  kernel_entry.rs  kernel_load.rs  main.rs  page_tables.rs
userspace/tests/: Cargo.toml  aarch64-breenix.json  access_test.rs  alarm_test.rs  argv_test.rs  blocking_recv_test.rs  bounce.rs  brk_test.rs  build-aarch64.sh  build.sh  cat.rs  cat_test.rs  clock_gettime_test.rs  cloexec_test.rs  concurrent_recv_stress.rs  counter.rs  cow_cleanup_test.rs  cow_oom_test.rs  cow_readonly_test.rs  cow_signal_test.rs  cow_sole_owner_test.rs  cow_stress_test.rs  cp.rs  cp_mv_argv_test.rs  create-aarch64-disk.sh  ctrl_c_test.rs  cwd_test.rs  demo.rs  devfs_test.rs  dns_test.rs  dup_test.rs  echld_error.rs  echo.rs  echo_argv_test.rs  exec_argv_test.rs  exec_basic.rs  exec_from_ext2_test.rs  exec_stack_argv_test.rs  exec_target.rs  false_test.rs  (+120 more)
userspace/tests-std/: Cargo.toml  build.sh  linker.ld
(+1906 files in other folders)
