
[package]
name = "breenix"
version = "0.1.0"
edition = "2021"

[features]
testing = ["kernel/testing"]
kernel_tests = ["kernel/kernel_tests"]
test_page_fault = ["kernel/test_page_fault"]
test_all_exceptions = ["kernel/test_all_exceptions"]

[[bin]]
name = "qemu-uefi"
test = false

[[bin]]
name = "qemu-bios"
test = false

[workspace]
members = ["kernel", "mcp"]

[dependencies]
ovmf-prebuilt = "0.2.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
conquer-once = { version = "0.4.0", default-features = false }
bootloader-x86_64-common = { git = "https://github.com/rust-osdev/bootloader.git", branch = "main" }
log = { version = "0.4.17", default-features = false }
x86_64 = { version = "0.15.2", features = ["instructions", "nightly"] }

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = { git = "https://github.com/rust-osdev/bootloader.git", branch = "main" }

[dev-dependencies]
libc = "0.2"
