
[package]
name = "breenix"
version = "0.1.0"
edition = "2021"

# Features handled by xtask when building kernel
[features]
default = []

# QEMU runner binaries handled by xtask
# [[bin]]
# name = "qemu-uefi"
# test = false

# [[bin]]
# name = "qemu-bios"
# test = false

[workspace]
members = ["kernel", "xtask"]
default-members = ["xtask"]
resolver = "2"

# Force all dependencies to use x86_64 v0.15.2 with workspace dependencies override
[workspace.dependencies]
x86_64 = { version = "0.15.2", features = ["instructions"] }

# Patch to override pic8259 with our local version using x86_64 v0.15
[patch.crates-io]
pic8259 = { path = "vendor/pic8259" }

# All dependencies moved to xtask to avoid architecture conflicts during testing
# [dependencies]
# ovmf-prebuilt = "0.2.3"

# x86_64-specific dependencies moved to kernel crate to avoid architecture conflicts

# Build dependencies moved to xtask to avoid architecture conflicts during testing

[dev-dependencies]
libc = "0.2"
xtask = { path = "xtask" }
