
[package]
name = "breenix"
version = "0.1.0"
edition = "2021"

[features]
testing = ["kernel/testing"]
kthread_test_only = ["kernel/kthread_test_only"]  # Run only kthread tests and exit
kthread_stress_test = ["kernel/kthread_stress_test"]  # Run kthread stress test (100+ kthreads) and exit
workqueue_test_only = ["kernel/workqueue_test_only"]  # Run only workqueue tests and exit
dns_test_only = ["kernel/dns_test_only"]  # Run only DNS test and exit (fast network debugging)
blocking_recv_test = ["kernel/blocking_recv_test"]  # Run only blocking recvfrom test and exit
test_divide_by_zero = ["kernel/test_divide_by_zero"]
test_invalid_opcode = ["kernel/test_invalid_opcode"]
test_page_fault = ["kernel/test_page_fault"]
test_all_exceptions = ["kernel/test_all_exceptions"]
external_test_bins = ["kernel/external_test_bins"]
vmnet = ["kernel/vmnet"]
interactive = ["kernel/interactive"]

[[bin]]
name = "qemu-uefi"
test = false

[[bin]]
name = "qemu-bios"
test = false

[workspace]
members = [
    "kernel",
    "xtask"
]

[dependencies]
ovmf-prebuilt = "0.2.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
conquer-once = { version = "0.4.0", default-features = false }
bootloader-x86_64-common = { git = "https://github.com/rust-osdev/bootloader.git", branch = "main" }
log = { version = "0.4.17", default-features = false }
x86_64 = { version = "0.15.2", features = ["instructions", "nightly"] }

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
# Limit bootloader to UEFI-only to avoid BIOS build/install on CI
bootloader = { git = "https://github.com/rust-osdev/bootloader.git", branch = "main", default-features = false, features = ["uefi"] }

[dev-dependencies]
libc = "0.2"
