[package]
name = "breenix-web"
version = "0.1.0"
edition = "2021"
description = "Breenix terminal running in the browser via WebAssembly"

# Standalone workspace — not part of the kernel workspace (different target triple)
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
breenix-core = { path = "../libs/breenix-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
spin = "0.9"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window",
]
