[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[lib]
name = "kernel"
path = "src/lib.rs"
test = false

[features]
# Core test infrastructure
testing = []                        # Enables kernel test harness and extra logging
release-tests = ["testing"]         # Heavy stress tests and comprehensive validation

[dependencies]
bootloader_api = "0.11"
embedded-graphics = "0.8.1"
x86_64.workspace = true
conquer-once = { version = "0.4.0", default-features = false }
bootloader-x86_64-common = "0.11"
log = { version = "0.4.17", default-features = false }
pic8259 = "0.10.4"
spin = "0.9.8"
uart_16550 = "0.3.2"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.17", default-features = false, features = ["alloc"] }
compiler_builtins = { version = "0.1", features = ["mem"] }
