[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[lib]
name = "kernel"
path = "src/lib.rs"
test = false

[features]
testing = []
test_divide_by_zero = []
test_invalid_opcode = []
test_page_fault = []
test_userspace = []
test_all_exceptions = []
external_test_bins = []

[dependencies]
bootloader_api = { git = "https://github.com/rust-osdev/bootloader.git", branch = "main" }
embedded-graphics = "0.8.1"
x86_64 = { version = "0.15.2", features = ["instructions", "nightly"] }
conquer-once = { version = "0.4.0", default-features = false }
bootloader-x86_64-common = { git = "https://github.com/rust-osdev/bootloader.git", branch = "main" }
log = { version = "0.4.17", default-features = false }
pic8259 = "0.10.4"
spin = "0.9.8"
uart_16550 = "0.3.2"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.17", default-features = false, features = ["alloc"] }
