[package]
name = "breenix-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "breenix-mcp"
path = "src/main.rs"

[[bin]]
name = "breenix-http-server"
path = "src/bin/http_server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
anyhow = "1.0"
sysinfo = "0.30"
warp = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
