[package]
name = "libbreenix"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Breen <rbreen@cimpress.com>"]
description = "Breenix userspace system call library"
license = "MIT"

# This is a standalone library, not part of the kernel workspace
[workspace]

[lib]
crate-type = ["rlib"]

[features]
default = []
runtime = []

[dependencies]
# No dependencies - pure no_std library
