[package]
name = "libgfx"
version = "0.1.0"
edition = "2021"
description = "Breenix userspace graphics library — drawing primitives, fonts, and framebuffer management"

[workspace]

[lib]
crate-type = ["rlib"]

[dependencies]
noto-sans-mono-bitmap = { version = "0.3", default-features = false, features = ["size_16", "regular", "unicode-basic-latin", "unicode-specials"] }
