[package]
name = "tests-std"
version = "0.1.0"
edition = "2021"
description = "Test programs using the real Rust standard library"

# This crate builds with -Z build-std to use the real Rust standard library
# It links against libbreenix-libc (libc.a) for system calls

[dependencies]
# No dependencies - we use pure std!

[[bin]]
name = "hello_std_real"
path = "src/hello_std_real.rs"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "z"

[workspace]

# Note: The libc patch is applied in rust-fork/library/Cargo.toml, not here.
# That's because -Z build-std uses the library workspace's Cargo.toml for
# dependency resolution, not the project's Cargo.toml.
