[package]
name = "userspace_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
libbreenix = { path = "../../libs/libbreenix" }

# ============================================================================
# EXAMPLES - Demo programs and shell
# ============================================================================

[[bin]]
name = "hello_time"
path = "../examples/hello_time.rs"

[[bin]]
name = "hello_world"
path = "../examples/hello_world.rs"

[[bin]]
name = "simple_exit"
path = "../examples/simple_exit.rs"

[[bin]]
name = "counter"
path = "../examples/counter.rs"

[[bin]]
name = "spinner"
path = "../examples/spinner.rs"

[[bin]]
name = "init_shell"
path = "../examples/init_shell.rs"

# ============================================================================
# COREUTILS - Standard POSIX utilities
# ============================================================================

[[bin]]
name = "cat"
path = "../bin/coreutils/cat.rs"

[[bin]]
name = "ls"
path = "../bin/coreutils/ls.rs"

[[bin]]
name = "echo"
path = "../bin/coreutils/echo.rs"

[[bin]]
name = "mkdir"
path = "../bin/coreutils/mkdir.rs"

[[bin]]
name = "rm"
path = "../bin/coreutils/rm.rs"

[[bin]]
name = "rmdir"
path = "../bin/coreutils/rmdir.rs"

[[bin]]
name = "cp"
path = "../bin/coreutils/cp.rs"

[[bin]]
name = "mv"
path = "../bin/coreutils/mv.rs"

[[bin]]
name = "true"
path = "../bin/coreutils/true.rs"

[[bin]]
name = "false"
path = "../bin/coreutils/false.rs"

[[bin]]
name = "head"
path = "../bin/coreutils/head.rs"

[[bin]]
name = "tail"
path = "../bin/coreutils/tail.rs"

[[bin]]
name = "wc"
path = "../bin/coreutils/wc.rs"

[[bin]]
name = "which"
path = "../bin/coreutils/which.rs"

[[bin]]
name = "resolution"
path = "../bin/coreutils/resolution.rs"

# ============================================================================
# SERVICES - Daemons and network services
# ============================================================================

[[bin]]
name = "telnetd"
path = "../bin/services/telnetd.rs"

# ============================================================================
# TESTS - Actual test programs
# ============================================================================

[[bin]]
name = "fork_test"
path = "fork_test.rs"

[[bin]]
name = "timer_test"
path = "timer_test.rs"

[[bin]]
name = "syscall_enosys"
path = "syscall_enosys.rs"

[[bin]]
name = "clock_gettime_test"
path = "clock_gettime_test.rs"

[[bin]]
name = "register_init_test"
path = "register_init_test.rs"

[[bin]]
name = "syscall_diagnostic_test"
path = "syscall_diagnostic_test.rs"

[[bin]]
name = "brk_test"
path = "brk_test.rs"

[[bin]]
name = "test_mmap"
path = "test_mmap.rs"

[[bin]]
name = "signal_test"
path = "signal_test.rs"

[[bin]]
name = "signal_handler_test"
path = "signal_handler_test.rs"

[[bin]]
name = "signal_return_test"
path = "signal_return_test.rs"

[[bin]]
name = "signal_regs_test"
path = "signal_regs_test.rs"

[[bin]]
name = "udp_socket_test"
path = "udp_socket_test.rs"

[[bin]]
name = "blocking_recv_test"
path = "blocking_recv_test.rs"

[[bin]]
name = "concurrent_recv_stress"
path = "concurrent_recv_stress.rs"

[[bin]]
name = "nonblock_eagain_test"
path = "nonblock_eagain_test.rs"

[[bin]]
name = "tcp_socket_test"
path = "tcp_socket_test.rs"

[[bin]]
name = "tcp_blocking_test"
path = "tcp_blocking_test.rs"

[[bin]]
name = "pipe_test"
path = "pipe_test.rs"

[[bin]]
name = "pipe_fork_test"
path = "pipe_fork_test.rs"

[[bin]]
name = "pipe_concurrent_test"
path = "pipe_concurrent_test.rs"

[[bin]]
name = "pipe_refcount_test"
path = "pipe_refcount_test.rs"

[[bin]]
name = "shell_pipe_test"
path = "shell_pipe_test.rs"

[[bin]]
name = "stdin_test"
path = "stdin_test.rs"

[[bin]]
name = "waitpid_test"
path = "waitpid_test.rs"

[[bin]]
name = "signal_fork_test"
path = "signal_fork_test.rs"

[[bin]]
name = "fork_pending_signal_test"
path = "fork_pending_signal_test.rs"

[[bin]]
name = "sigchld_test"
path = "sigchld_test.rs"

[[bin]]
name = "wnohang_timing_test"
path = "wnohang_timing_test.rs"

[[bin]]
name = "signal_exec_test"
path = "signal_exec_test.rs"

[[bin]]
name = "signal_exec_check"
path = "signal_exec_check.rs"

[[bin]]
name = "pause_test"
path = "pause_test.rs"

[[bin]]
name = "dup_test"
path = "dup_test.rs"

[[bin]]
name = "fcntl_test"
path = "fcntl_test.rs"

[[bin]]
name = "pipe2_test"
path = "pipe2_test.rs"

[[bin]]
name = "cloexec_test"
path = "cloexec_test.rs"

[[bin]]
name = "poll_test"
path = "poll_test.rs"

[[bin]]
name = "select_test"
path = "select_test.rs"

[[bin]]
name = "nonblock_test"
path = "nonblock_test.rs"

[[bin]]
name = "tty_test"
path = "tty_test.rs"

[[bin]]
name = "job_control_test"
path = "job_control_test.rs"

[[bin]]
name = "sigchld_job_test"
path = "sigchld_job_test.rs"

[[bin]]
name = "session_test"
path = "session_test.rs"

[[bin]]
name = "pipeline_test"
path = "pipeline_test.rs"

[[bin]]
name = "job_table_test"
path = "job_table_test.rs"

[[bin]]
name = "file_read_test"
path = "file_read_test.rs"

[[bin]]
name = "ctrl_c_test"
path = "ctrl_c_test.rs"

[[bin]]
name = "getdents_test"
path = "getdents_test.rs"

[[bin]]
name = "lseek_test"
path = "lseek_test.rs"

[[bin]]
name = "fs_write_test"
path = "fs_write_test.rs"

[[bin]]
name = "fs_rename_test"
path = "fs_rename_test.rs"

[[bin]]
name = "fs_large_file_test"
path = "fs_large_file_test.rs"

[[bin]]
name = "fs_directory_test"
path = "fs_directory_test.rs"

[[bin]]
name = "fs_link_test"
path = "fs_link_test.rs"

[[bin]]
name = "access_test"
path = "access_test.rs"

[[bin]]
name = "devfs_test"
path = "devfs_test.rs"

[[bin]]
name = "cwd_test"
path = "cwd_test.rs"

# Coreutil tests
[[bin]]
name = "true_test"
path = "true_test.rs"

[[bin]]
name = "false_test"
path = "false_test.rs"

[[bin]]
name = "head_test"
path = "head_test.rs"

[[bin]]
name = "tail_test"
path = "tail_test.rs"

[[bin]]
name = "wc_test"
path = "wc_test.rs"

[[bin]]
name = "which_test"
path = "which_test.rs"

[[bin]]
name = "cat_test"
path = "cat_test.rs"

[[bin]]
name = "ls_test"
path = "ls_test.rs"

[[bin]]
name = "fork_memory_test"
path = "fork_memory_test.rs"

[[bin]]
name = "fork_state_test"
path = "fork_state_test.rs"

[[bin]]
name = "cow_signal_test"
path = "cow_signal_test.rs"

[[bin]]
name = "cow_cleanup_test"
path = "cow_cleanup_test.rs"

[[bin]]
name = "cow_sole_owner_test"
path = "cow_sole_owner_test.rs"

[[bin]]
name = "cow_stress_test"
path = "cow_stress_test.rs"

[[bin]]
name = "cow_readonly_test"
path = "cow_readonly_test.rs"

[[bin]]
name = "cow_oom_test"
path = "cow_oom_test.rs"

[[bin]]
name = "argv_test"
path = "argv_test.rs"

[[bin]]
name = "exec_argv_test"
path = "exec_argv_test.rs"

[[bin]]
name = "exec_stack_argv_test"
path = "exec_stack_argv_test.rs"

[[bin]]
name = "tcp_client_test"
path = "tcp_client_test.rs"

[[bin]]
name = "dns_test"
path = "dns_test.rs"

[[bin]]
name = "http_test"
path = "http_test.rs"

[[bin]]
name = "exec_from_ext2_test"
path = "exec_from_ext2_test.rs"

[[bin]]
name = "fs_block_alloc_test"
path = "fs_block_alloc_test.rs"

[[bin]]
name = "pty_test"
path = "pty_test.rs"

[[bin]]
name = "fbinfo_test"
path = "fbinfo_test.rs"

# Coreutils argv integration tests
[[bin]]
name = "mkdir_argv_test"
path = "mkdir_argv_test.rs"

[[bin]]
name = "cp_mv_argv_test"
path = "cp_mv_argv_test.rs"

[[bin]]
name = "echo_argv_test"
path = "echo_argv_test.rs"

[[bin]]
name = "rm_argv_test"
path = "rm_argv_test.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = true

[workspace]
