[package]
name = "userspace_tests"
version = "0.1.0"
edition = "2021"
description = "Legacy no_std userspace crate - all binaries now built from tests-std"

# All userspace binaries have been ported to std and are built from
# userspace/tests-std/. This crate is retained only as the output
# directory for .elf files that get included in the ext2 disk image.
#
# To build userspace binaries, run: ./userspace/tests-std/build.sh

[dependencies]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = true

[workspace]
