[package]
name = "userspace-tests"
version = "0.1.0"
edition = "2021"
description = "Userspace test programs and utilities for Breenix"

# This crate builds with -Z build-std to use the real Rust standard library
# It links against libbreenix-libc (libc.a) for system calls

[dependencies]
libbreenix = { path = "../../libs/libbreenix" }
libgfx = { path = "../../libs/libgfx" }

[[bin]]
name = "hello_std_real"
path = "src/hello_std_real.rs"

[[bin]]
name = "signal_handler_test"
path = "src/signal_handler_test.rs"

[[bin]]
name = "signal_return_test"
path = "src/signal_return_test.rs"

[[bin]]
name = "signal_regs_test"
path = "src/signal_regs_test.rs"

[[bin]]
name = "sigaltstack_test"
path = "src/sigaltstack_test.rs"

[[bin]]
name = "sigsuspend_test"
path = "src/sigsuspend_test.rs"

[[bin]]
name = "pause_test"
path = "src/pause_test.rs"

[[bin]]
name = "tty_test"
path = "src/tty_test.rs"

[[bin]]
name = "session_test"
path = "src/session_test.rs"

[[bin]]
name = "unix_socket_test"
path = "src/unix_socket_test.rs"

[[bin]]
name = "fifo_test"
path = "src/fifo_test.rs"

[[bin]]
name = "unix_named_socket_test"
path = "src/unix_named_socket_test.rs"

[[bin]]
name = "syscall_enosys"
path = "src/syscall_enosys.rs"

[[bin]]
name = "clock_gettime_test"
path = "src/clock_gettime_test.rs"

[[bin]]
name = "file_read_test"
path = "src/file_read_test.rs"

[[bin]]
name = "lseek_test"
path = "src/lseek_test.rs"

[[bin]]
name = "fs_write_test"
path = "src/fs_write_test.rs"

[[bin]]
name = "fs_rename_test"
path = "src/fs_rename_test.rs"

[[bin]]
name = "fs_large_file_test"
path = "src/fs_large_file_test.rs"

[[bin]]
name = "fs_directory_test"
path = "src/fs_directory_test.rs"

[[bin]]
name = "fs_link_test"
path = "src/fs_link_test.rs"

[[bin]]
name = "access_test"
path = "src/access_test.rs"

[[bin]]
name = "devfs_test"
path = "src/devfs_test.rs"

[[bin]]
name = "cwd_test"
path = "src/cwd_test.rs"

[[bin]]
name = "getdents_test"
path = "src/getdents_test.rs"

[[bin]]
name = "pipe_test"
path = "src/pipe_test.rs"

[[bin]]
name = "pipe2_test"
path = "src/pipe2_test.rs"

[[bin]]
name = "dup_test"
path = "src/dup_test.rs"

[[bin]]
name = "fcntl_test"
path = "src/fcntl_test.rs"

[[bin]]
name = "poll_test"
path = "src/poll_test.rs"

[[bin]]
name = "select_test"
path = "src/select_test.rs"

[[bin]]
name = "nonblock_test"
path = "src/nonblock_test.rs"

[[bin]]
name = "brk_test"
path = "src/brk_test.rs"

# Phase 2: Fork-dependent programs
[[bin]]
name = "fork_test"
path = "src/fork_test.rs"

[[bin]]
name = "fork_memory_test"
path = "src/fork_memory_test.rs"

[[bin]]
name = "fork_state_test"
path = "src/fork_state_test.rs"

[[bin]]
name = "waitpid_test"
path = "src/waitpid_test.rs"

[[bin]]
name = "exec_argv_test"
path = "src/exec_argv_test.rs"

[[bin]]
name = "cloexec_test"
path = "src/cloexec_test.rs"

# Phase 2b: Process/signal fork-dependent programs
[[bin]]
name = "kill_process_group_test"
path = "src/kill_process_group_test.rs"

[[bin]]
name = "sigchld_test"
path = "src/sigchld_test.rs"

[[bin]]
name = "sigchld_job_test"
path = "src/sigchld_job_test.rs"

[[bin]]
name = "ctrl_c_test"
path = "src/ctrl_c_test.rs"

[[bin]]
name = "job_control_test"
path = "src/job_control_test.rs"

[[bin]]
name = "signal_fork_test"
path = "src/signal_fork_test.rs"

[[bin]]
name = "signal_exec_test"
path = "src/signal_exec_test.rs"

[[bin]]
name = "wnohang_timing_test"
path = "src/wnohang_timing_test.rs"

[[bin]]
name = "fork_pending_signal_test"
path = "src/fork_pending_signal_test.rs"

[[bin]]
name = "shell_pipe_test"
path = "src/shell_pipe_test.rs"

[[bin]]
name = "pipeline_test"
path = "src/pipeline_test.rs"

# Phase 3: Copy-on-Write test programs
[[bin]]
name = "cow_cleanup_test"
path = "src/cow_cleanup_test.rs"

[[bin]]
name = "cow_sole_owner_test"
path = "src/cow_sole_owner_test.rs"

[[bin]]
name = "cow_stress_test"
path = "src/cow_stress_test.rs"

[[bin]]
name = "cow_readonly_test"
path = "src/cow_readonly_test.rs"

[[bin]]
name = "cow_signal_test"
path = "src/cow_signal_test.rs"

# Phase 3: Coreutils
[[bin]]
name = "true"
path = "src/true.rs"

[[bin]]
name = "false"
path = "src/false.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "head"
path = "src/head.rs"

[[bin]]
name = "tail"
path = "src/tail.rs"

[[bin]]
name = "wc"
path = "src/wc.rs"

[[bin]]
name = "which"
path = "src/which.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "mkdir"
path = "src/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/rmdir.rs"

[[bin]]
name = "rm"
path = "src/rm.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

[[bin]]
name = "mv"
path = "src/mv.rs"

[[bin]]
name = "resolution"
path = "src/resolution.rs"

# Phase 4: init_shell (std port)
[[bin]]
name = "init_shell"
path = "src/init_shell.rs"

# Additional test programs
[[bin]]
name = "alarm_test"
path = "src/alarm_test.rs"

[[bin]]
name = "argv_test"
path = "src/argv_test.rs"

[[bin]]
name = "blocking_recv_test"
path = "src/blocking_recv_test.rs"

[[bin]]
name = "bounce"
path = "src/bounce.rs"

[[bin]]
name = "cat_test"
path = "src/cat_test.rs"

[[bin]]
name = "concurrent_recv_stress"
path = "src/concurrent_recv_stress.rs"

[[bin]]
name = "counter"
path = "src/counter.rs"

[[bin]]
name = "cow_oom_test"
path = "src/cow_oom_test.rs"

[[bin]]
name = "cp_mv_argv_test"
path = "src/cp_mv_argv_test.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "dns_test"
path = "src/dns_test.rs"

[[bin]]
name = "echo_argv_test"
path = "src/echo_argv_test.rs"

[[bin]]
name = "exec_from_ext2_test"
path = "src/exec_from_ext2_test.rs"

[[bin]]
name = "exec_stack_argv_test"
path = "src/exec_stack_argv_test.rs"

[[bin]]
name = "false_test"
path = "src/false_test.rs"

[[bin]]
name = "fbinfo_test"
path = "src/fbinfo_test.rs"

[[bin]]
name = "fs_block_alloc_test"
path = "src/fs_block_alloc_test.rs"

[[bin]]
name = "head_test"
path = "src/head_test.rs"

[[bin]]
name = "hello_time"
path = "src/hello_time.rs"

[[bin]]
name = "http_test"
path = "src/http_test.rs"

[[bin]]
name = "init"
path = "src/init.rs"

[[bin]]
name = "itimer_test"
path = "src/itimer_test.rs"

[[bin]]
name = "job_table_test"
path = "src/job_table_test.rs"

[[bin]]
name = "ls_test"
path = "src/ls_test.rs"

[[bin]]
name = "mkdir_argv_test"
path = "src/mkdir_argv_test.rs"

[[bin]]
name = "nonblock_eagain_test"
path = "src/nonblock_eagain_test.rs"

[[bin]]
name = "particles"
path = "src/particles.rs"

[[bin]]
name = "pipe_concurrent_test"
path = "src/pipe_concurrent_test.rs"

[[bin]]
name = "pipe_fork_test"
path = "src/pipe_fork_test.rs"

[[bin]]
name = "pipe_refcount_test"
path = "src/pipe_refcount_test.rs"

[[bin]]
name = "pty_test"
path = "src/pty_test.rs"

[[bin]]
name = "register_init_test"
path = "src/register_init_test.rs"

[[bin]]
name = "rm_argv_test"
path = "src/rm_argv_test.rs"

[[bin]]
name = "signal_exec_check"
path = "src/signal_exec_check.rs"

[[bin]]
name = "signal_test"
path = "src/signal_test.rs"

[[bin]]
name = "simple_exit"
path = "src/simple_exit.rs"

[[bin]]
name = "sleep_debug_test"
path = "src/sleep_debug_test.rs"

[[bin]]
name = "spinner"
path = "src/spinner.rs"

[[bin]]
name = "stdin_test"
path = "src/stdin_test.rs"

[[bin]]
name = "syscall_diagnostic_test"
path = "src/syscall_diagnostic_test.rs"

[[bin]]
name = "tail_test"
path = "src/tail_test.rs"

[[bin]]
name = "tcp_blocking_test"
path = "src/tcp_blocking_test.rs"

[[bin]]
name = "tcp_client_test"
path = "src/tcp_client_test.rs"

[[bin]]
name = "tcp_socket_test"
path = "src/tcp_socket_test.rs"

[[bin]]
name = "telnetd"
path = "src/telnetd.rs"

[[bin]]
name = "test_mmap"
path = "src/test_mmap.rs"

[[bin]]
name = "timer_test"
path = "src/timer_test.rs"

[[bin]]
name = "true_test"
path = "src/true_test.rs"

[[bin]]
name = "udp_socket_test"
path = "src/udp_socket_test.rs"

[[bin]]
name = "wc_test"
path = "src/wc_test.rs"

[[bin]]
name = "which_test"
path = "src/which_test.rs"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "z"

[workspace]

# Note: The libc patch is applied in rust-fork/library/Cargo.toml, not here.
# That's because -Z build-std uses the library workspace's Cargo.toml for
# dependency resolution, not the project's Cargo.toml.
